<resources>
    <string name="app_name">Cheqit</string>
    <string name="title_add">Add Transaction</string>
    <string name="title_history">Past Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_data">View Data</string>
    <string name="add_name">Name of Transaction</string>
    <string name="add_submit">Submit Transaction</string>
    <string name="add_amount">Amount</string>
    <string name="add_comment">Additional Info</string>
    <string name="add_location">Location</string>
    <string name="add_title">Add Transaction</string>
    <string name="settings_title">Settings</string>
    <string name="settings_add">Add Accounts</string>
    <string name="settings_accounts">Edit Accounts</string>
    <string name="settings_add_name">Name of Account</string>
    <string name="settings_clear">Delete all Transactions</string>
    <string name="settings_add_amount">Current Amount in Account</string>
    <string name="settings_add_comment">Additional Info</string>
    <string name="settings_submit">Add Account</string>
    <string name="settings_edit_account">Save Account</string>
    <string name="settings_delete_account">Delete Account</string>
    <string name="radio_expense">Expense</string>
    <string name="radio_income">Income</string>
    <string name="add_photo">Take Photo of Receipt</string>
    <string name="edit_title">Edit Transaction</string>
    <string name="edit_submit">Save Edits</string>
    <string name="edit_delete">Delete Transaction</string>
    <string name="settings_add_title">Add Account</string>
    <string name="list_account_title">Accounts</string>
    <string name="list_transactions_title">Past Transactions</string>
    <string name="export_transactions">Export Transactions</string>
    <string name="add_settings_title">Add Account</string>
    <string name="title_activity_main_screen">Test Data</string>
    <string name="main_add">Add</string>
    <string name="main_history">History</string>
    <string name="main_data">Data</string>
    <string name="title_overview">Overview</string>
</resources>
