<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devops.colby.cheqit.HomeActivity">
    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/app_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:textSize="34sp"
        android:text="@string/app_name"/>
    <Button
        android:id="@+id/button_add"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/app_id"
        android:text="@string/title_add" />
    <Button
        android:id="@+id/button_history"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button_add"
        android:text="@string/title_history" />
    <Button
        android:id="@+id/button_data"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button_history"
        android:text="@string/title_data" />
    <Button
        android:id="@+id/button_settings"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button_data"
        android:text="@string/title_settings" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>