<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devops.colby.cheqit.AddAccountActivity">
    <RelativeLayout android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/settings_add_titleText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            android:text="@string/add_title"/>
        <EditText
            android:id="@+id/settings_add_nameText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/settings_add_titleText"
            android:layout_centerInParent="true"
            android:inputType="textPersonName"
            android:hint="@string/settings_add_name" />
        <EditText
            android:id="@+id/settings_add_amountText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/settings_add_nameText"
            android:layout_centerInParent="true"
            android:inputType="textPersonName"
            android:hint="@string/settings_add_amount" />
        <EditText
            android:id="@+id/settings_add_commentText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/settings_add_amountText"
            android:layout_centerInParent="true"
            android:inputType="textPersonName"
            android:hint="@string/settings_add_comment" />
        <Button
            android:id="@+id/settings_add_button_submit"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/settings_add_commentText"
            android:text="@string/add_submit" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
