<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devops.colby.cheqit.SettingsActivity">
    <RelativeLayout android:id="@+id/RelativeLayout02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:textSize="34sp"
            android:text="@string/settings_title"/>
        <Button
            android:id="@+id/button_settings_add"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/settings_title"
            android:text="@string/settings_add" />
        <Button
            android:id="@+id/button_settings_accounts"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/button_settings_add"
            android:text="@string/settings_accounts" />
        <Button
            android:id="@+id/button_settings_clear"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/button_settings_accounts"
            android:text="@string/settings_clear" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
